add christmas text and icons

--- a/src/app/pages/portal/portal.component.html
+++ b/src/app/pages/portal/portal.component.html
@@ -14,7 +14,7 @@
       matTooltipShowDelay="500"
       [matTooltip]="(sidenavOpened ? 'menu.close' : 'menu.open') | translate"
       (click)="onToggleSidenavClick()">
-      <mat-icon svgIcon="menu">
+      <mat-icon svgIcon="gift">
       </mat-icon>
     </button>
 
