--- a/src/app/pages/portal/sidenav/sidenav.component.html
+++ b/src/app/pages/portal/sidenav/sidenav.component.html
@@ -14,7 +14,7 @@
           matTooltipShowDelay="500"
           [matTooltip]="'igo.context.sidenav.mainMenu' | translate"
           (click)="onUnselectButtonClick()">
-          <mat-icon svgIcon="home"></mat-icon>
+          <mat-icon svgIcon="pine-tree"></mat-icon>
         </button>
 
         <igo-panel [title]="title$ | async | translate">
