--- a/src/app/pages/portal/welcome-window/welcome-window.component.html
+++ b/src/app/pages/portal/welcome-window/welcome-window.component.html
@@ -16,6 +16,8 @@
     </igo-custom-html>
   </div>
 
+  <h2 class="christmas">{{'welcomeWindow.merryChristmas' | translate}}</h2>
+
   <p></p>
   <div class="button-container">
     <igo-interactive-tour
