fix (qcca-header) change to relative path

--- a/src/app/pages/qcca-mod/qcca-header/qcca-header.component.scss
+++ b/src/app/pages/qcca-mod/qcca-header/qcca-header.component.scss
@@ -1,4 +1,4 @@
-@import '/src/app/pages/portal/qcca-mod/qcca-theme/qcca-theme.scss';
+@import '../qcca-theme/qcca-theme.scss';
 
 $qccaheader-padding-top: 72px;
 /*
