--- a/src/app/pages/portal/portal.component.html
+++ b/src/app/pages/portal/portal.component.html
@@ -1,3 +1,7 @@
+<igo-simple-filters *ngIf="showSimpleFilters"
+  (filterSelection)="onFilterSelection($event)">
+</igo-simple-filters>
+
 <mat-sidenav-container class="app-main-container">
   <mat-sidenav-content>
 
@@ -244,5 +248,6 @@
 <igo-simple-feature-list *ngIf="showSimpleFeatureList && selectedWorkspace$ | async as workspace"
   [entityStore]="workspace.entityStore"
   [clickedEntities]="clickedEntities$ | async"
+  [simpleFiltersValues]="simpleFiltersValue$ | async"
   (listSelection)="entitySelectChange($event)">
 </igo-simple-feature-list>
