--- a/src/app/pages/portal/portal.component.html
+++ b/src/app/pages/portal/portal.component.html
@@ -13,6 +13,7 @@
 
     <igo-search-bar *ngIf="showSearchBar"
       #searchBar
+      showSearchButton="true"
       [term]="searchBarTerm"
       [termSplitter]="termSplitter"
       [minLength]="minSearchTermLength"
