--- a/src/app/pages/portal/portal.component.html
+++ b/src/app/pages/portal/portal.component.html
@@ -284,7 +284,7 @@
   </ng-container>
 
   <ng-container *ngIf="selectedWorkspace$ | async as workspace">
-    <igo-entity-table
+    <msp-entity-table
       [class]="isEditionWorkspace(workspace) ? 'edition-table' : ''"
       [paginator]="workspacePaginator"
       *ngIf="
@@ -298,7 +298,7 @@
       (entitySelectChange)="entitySelectChange($event)"
       [template]="workspace.meta.tableTemplate"
     >
-    </igo-entity-table>
+    </msp-entity-table>
     <span>{{ workspaceNotAvailableMessage | translate }}</span>
   </ng-container>
 </app-expansion-panel>
