--- a/assets/igo2/core/theming/prebuilt-themes/qcca-theme.css
+++ b/assets/igo2/core/theming/prebuilt-themes/qcca-theme.css
@@ -1,5 +1,5 @@
 h4 {
-  font-size: 16px !important;
+  font-size: 14px !important;
   line-height: 22px !important;
   font-weight: 500 !important;
 }
@@ -2951,6 +2951,11 @@ igo-layer-legend img:after {
   border-top-color: #095797;
 }
 
+igo-layer-list-tool mat-form-field .mat-mdc-text-field-wrapper,
+igo-layer-list-tool mat-form-field .mat-mdc-form-field-focus-overlay {
+  background-color: white !important;
+}
+
 igo-layer-list-tool .mat-mdc-icon-button.mat-mdc-button-base {
   --mdc-icon-button-state-layer-size: 40px;
   width: var(--mdc-icon-button-state-layer-size);
@@ -3042,11 +3047,9 @@ igo-menu-button > button#menu-button.menu-button-white-background {
   font-size: 28px;
 }
 
-igo-search-bar mat-form-field .mat-mdc-text-field-wrapper {
+igo-search-bar mat-form-field .mat-mdc-text-field-wrapper,
+igo-search-bar mat-form-field .mat-mdc-form-field-focus-overlay {
   background-color: white !important;
-}
-igo-search-bar mat-form-field .mdc-line-ripple {
-  display: none;
 }
 
 igo-search-bar .mat-mdc-form-field-infix {
@@ -3075,6 +3078,17 @@ igo-search-bar .mdc-text-field--no-label:not(.mdc-text-field--outlined):not(.mdc
 }
 igo-search-bar .mat-mdc-text-field-wrapper:not(.mdc-text-field--outlined) .mat-mdc-floating-label {
   display: none;
+}
+
+igo-search-bar mat-form-field .mdc-line-ripple {
+  display: none;
+}
+
+igo-search-results-item .mdc-list-item--with-leading-icon:hover .mdc-list-item__start {
+  color: black;
+}
+igo-search-results-item .mdc-list-item--with-leading-icon .mdc-list-item__start {
+  color: rgba(0, 0, 0, 0.87);
 }
 
 igo-confirmation-popup-component h1 {
