--- a/assets/igo2/core/theming/prebuilt-themes/qcca-theme.css
+++ b/assets/igo2/core/theming/prebuilt-themes/qcca-theme.css
@@ -2997,6 +2997,12 @@ igo-layer-item.igo-layer-item-focused > mat-list-item {
   background-color: #9ec8eb;
   color: white;
 }
+igo-layer-item button:not(.mat-primary) mat-icon {
+  color: #095797;
+}
+igo-layer-item button mat-icon.disabled {
+  color: rgba(9, 87, 151, 0.38);
+}
 
 igo-map-browser div.ol-attribution > button {
   color: #095797;
